tests/error/if_consteval_error_else_block.bz
// error: invalid conversion from '__null_t' to 'i32'
function test()
{
	let _ = if consteval (false) {} else { [ null as i32 ] };
}
